--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,3 +9,5 @@ spring:
     url: jdbc:mysql://localhost:3306/bookmarket?createDatabaseIfNotExist=true
     username: root
     password: bookmarketKT
+  jackson:
+    default-property-inclusion: non_null
