Inserindo spring security na aplicacao

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,3 +11,7 @@ spring:
     password: bookmarketKT
   jackson:
     default-property-inclusion: non_null
+
+jwt:
+  secret: c6166cf5-612a-41c3-94f8-b12515e1a4dd
+  expiration: 999999
